mypkg/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Interviewer__c</fullName>
        <label>Associated Interviewer</label>
        <referenceTo>Interviewer__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Offered__c</fullName>
        <label>Position Offered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GENC</fullName>
                </value>
                <value>
                    <fullName>GENCNEXT</fullName>
                </value>
                <value>
                    <fullName>GENCELEVATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{000}</displayFormat>
        <label>Candidate No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>